# dftd3-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md  release-plz.toml
.claude/: CLAUDE.md
.claude/commands/: version-update.md
.claude/rules/: agent-and-maintaince.md  version-update-guide.md
.github/workflows/: test-dftd3-src.yml  test-dftd3.yml
dftd3/: Cargo.toml  build.rs
dftd3-src/: Cargo.toml  build.rs
dftd3-src/external_deps/: CMakeLists.txt
dftd3-src/src/: lib.rs
dftd3-src/tests/: test_linked.rs
dftd3/examples/: energy_r2scan_d3bj.rs  energy_r2scan_d3zero.rs  gradient_r2scan_d3bj.rs  test_interface.rs  test_parameters.rs  test_parsing.rs
dftd3/scripts/: generate_ffi.py  perform_bindgen.py  util_dyload.py
dftd3/src/: damping_param_usage.md  ffi.rs  ffi_static.rs  interface.rs  interface_gcp.rs  lib.rs  parameters.rs  parsing.rs
dftd3/src/ffi_dynamic/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  mod.rs
