[workspace]
resolver = "2"
members = [
    "dftd3", "dftd3-src",
]

[workspace.package]
edition = "2021"
version = "0.1.1"
description = "simple-dftd3 FFI bindings, wrappers and build-from-source"
repository = "https://github.com/RESTGroup/dftd3-rs"
keywords = ["ffi", "chemistry"]
categories = ["science"]
license = "LGPL-3.0"

[workspace.dependencies]
